# Attacker-TTP-Analysis-Incident-Response-Lab

./: .dockerignore  .gitignore  Dockerfile  INVESTIGATION_WALKTHROUGH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
forensic_artifacts/email/: phishing_sample_headers.txt
forensic_artifacts/memory/: README.md  volatility_pslist_excerpt.txt  win11_lab_memory.dump.placeholder
forensic_artifacts/notes/: FORENSIC_WORKFLOW.md  powershell_cmdline_sample.txt
forensic_artifacts/pcaps/: beacon_dns_lab.pcap  c2_http_beacon_lab.pcap  phishing_click_lab.pcap  web_exploit_path_traversal_lab.pcap
forensic_artifacts/process_trees/: browser_phish_child.json  c2_beacon_tree.json  injection_tree.json  post_vpn_recon.json  powershell_attack_tree.json  web_worker_abuse.json
forensic_artifacts/registry/: run_key_persistence_lab.reg
forensic_artifacts/sandbox_reports/: stager_sandbox_sample.json
incident_scenarios/: README.md
incident_scenarios/01_phishing_credential_theft/: artifacts.json  incident_report.md
incident_scenarios/02_malware_beaconing_c2/: artifacts.json  incident_report.md
incident_scenarios/03_brute_force_compromise/: artifacts.json  incident_report.md
incident_scenarios/04_suspicious_powershell/: artifacts.json  incident_report.md
rules/: README.md
rules/yara/: malware_families.yar
scripts/: extract_iocs.py  generate_sample_pcaps.py
tests/: test_detection_patterns.py  test_ids_rules.py  test_ioc_parser.py  test_phishing_headers.py  test_scenarios_complete.py  test_sigma_rules.py  test_yara_rules.py
(+17 files in other folders)
