[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attacker-ttp-analysis-ir-lab"
version = "1.0.0"
description = "Incident response simulations and detection rule engineering lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "scapy>=2.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
